CSS/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-family: "Roboto";
  overflow-x: hidden;
  font-size: 16px;
  scroll-behavior: smooth;
}

a,
a:hover,
a:focus,
a:active {
  text-decoration: none;
  color: inherit;
}

a {
  color: inherit; /* Removes blue colors from links too */
  text-decoration: inherit; /* Removes no underline */
}

/*=============================== NAVBAR SECTION ===============================*/

.header {
  padding: 1.5rem;
  margin: 0 auto;
  width: 85%;
  font-size: 1.5rem;
}
.header header {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.header header .brand-logo img {
  width: 40%;
}

.header .navBar nav {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  /* position: absolute; */
  position: fixed;
  left: 0;
  top: 120px;
  background-color: gray;
  width: 100%;
  height: 100vh;
  text-align: center;
  padding: 20px 0;
  transition: 0.5s ease-in-out all;
  transform: translateX(100%);
}

.header .navBar nav.nav-toggle {
  transform: translateX(0);
}

.header header .navBar .nav-list {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  padding-bottom: 10px;
}

/* .header header .navBar .nav-list li {
  padding: 5px 0;
} */

.header header .navBar .nav-list li a {
  font-size: 3rem;
  text-decoration: none;
  color: white;
  text-transform: uppercase;
  padding: 0 25px;
  line-height: 55px;
  display: block;
}

.header .navBar nav .nav-list li a:hover {
  background-color: #9d3b3b;
  color: white;
}

.header header .navBar .navBar-button {
  padding: 10px;
  display: block;
  width: 100%;
  /* border-top: 0.5px solid rgba(255, 255, 255, 0.733); */
}

.header header .navBar .navBar-button a {
  display: inline-block;
  padding: 0.5em 2em;
  font-size: 1.2rem;
  border-radius: 4px;
  background-color: #9d3b3b;
  border: 1px #9d3b3b solid;
  color: white;
  text-decoration: none;
}

.header header .navBar .navBar-button a:hover {
  background-color: white;
  color: #9d3b3b;
  border: 1px #9d3b3b solid;
}

.header .navBar .hamburger-Menu {
  display: inline-block;
  cursor: pointer;
  padding: 20px;
  border: 1px solid black;
}

.header .navBar .hamburger-Menu .bar {
  height: 2px;
  width: 20px;
  background-color: black;
  position: relative;
  transition: 0.5s ease all;
}

.header .navBar .hamburger-Menu .bar::before,
.header .navBar .hamburger-Menu .bar::after {
  position: absolute;
  content: "";
  height: 2px;
  width: 20px;
  background-color: black;
  transition: 0.5s ease all;
}

.header .navBar .hamburger-Menu .bar::before {
  top: -5px;
  left: 0;
}

.header .navBar .hamburger-Menu .bar::after {
  bottom: -5px;
  left: 0;
}

.header .navBar .hamburger-Menu.close .bar::before {
  top: 0;
  transform: rotate(45deg);
}

.header .navBar .hamburger-Menu.close .bar::after {
  top: 0;
  transform: rotate(-45deg);
}

.header .navBar .hamburger-Menu.close .bar {
  background-color: transparent;
}

.header-container {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: auto;
  position: sticky;
  top: 0;
  z-index: 1000;
  background: white;
  border-bottom: 1px solid #f2f2f2;
}
/*=============================== END OF NAVBAR SECTION ===============================*/

/*=============================== HERO SECTION ===============================*/
#hero {
  width: 100%;
  height: 100vh;
  background: url("/Images/hero_Photo_1920x1281.jpg") no-repeat center / cover;

  /* The linear-gradient adds a overlay to improve text readability */
  /* background: linear-gradient(rgba(0, 0, 0, 0.455), rgba(0, 0, 0, 0.4111)),
    url("/Landing_Page_Template/Images/hero_Photo_1920x1281.jpg") no-repeat
      center / cover; */

  /* The color code will add that color to the entire section */
  /* color: white; */
}

.container {
  width: 90%;
  height: 100%;
  max-width: 1200px;
  /* margin: 0 auto; */
  display: flex;
  justify-content: center;
  align-items: center;
  /* To move the content to the right Part 1/2 */
  /* text-align: right; */
}

.container .info h1 {
  /* The html font-size is 18px. So 18 * 3 will be 54px/ Always use rem or em instead of px */
  font-size: 4rem;
  margin-bottom: 1rem;
}

.container .info h2 {
  font-size: 2rem;
  margin-bottom: 2rem;
}

.container .info p {
  font-size: 1.5rem;
  /* The reason why the p tag has 70% width
  is so that it doesn't stretch all the way across
   the .container. It only stretches 70% of the container  */
  max-width: 55%;
  /* To move the p tag to the right Part 2/2 */
  /* margin: 0 auto;
  margin-right: 0; */
}

.container .info a {
  text-decoration: none;
  display: inline-block;
  background-color: #9d3b3b;
  color: white;
  border: 1px #9d3b3b solid;
  border-radius: 4px;
  font-size: 1.8rem;
  padding: 0.5em 2em;
  margin-top: 2rem;
}

.container .info a:hover {
  background-color: white;
  color: #9d3b3b;
  border: 1px #9d3b3b solid;
}

/*=============================== END OF HERO SECTION ===============================*/

/*=============================== MENU SECTION ===============================*/
#menu {
  width: 100%;
  /* height: 100vh; */
  min-height: 100vh;
  padding: 45px 0;
}

.menu__Title {
  font-size: 4rem;
  margin: 1rem 0;
  text-align: center;
}

.menu__items-Container {
  width: 100%;
  height: 100%;
  margin: 5rem 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.menu__item {
  /* width: clamp(320px, 65%, 65%); */
  /* width: clamp(320px, 35%, 35%); */
  flex: 1 0 21%; /* explanation below */
  width: clamp(23ch, 60%, 46ch);
  padding: 24px;
}

.menu__item-Contents {
  border: 2px solid #f2f2f2;
  border-radius: 8px;
  overflow: hidden;
}

.menu__item,
.menu__item--photo {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}
/* ... */

